Closed
Bug 1501944
Opened 2 years ago
Closed 2 years ago
[Wayland] Enable wayland target builds on Gtk 3.10
Categories
(Core :: Widget: Gtk, defect)
Core
Widget: Gtk
Tracking
()
RESOLVED
FIXED
mozilla65
Tracking | Status | |
---|---|---|
firefox65 | --- | fixed |
People
(Reporter: stransky, Assigned: stransky)
References
(Blocks 1 open bug)
Details
Attachments
(1 file, 1 obsolete file)
In order to build Wayland target at Mozilla infrastructure we need to make cairo-gtk3-wayland target compatible with Gtk 3.10.
Assignee | ||
Updated•2 years ago
|
Assignee: nobody → stransky
Assignee | ||
Comment 1•2 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=4116c688d47596275e92d4a2c3ac688b456f0f09
Assignee | ||
Comment 2•2 years ago
|
||
from try: https://treeherder.mozilla.org/#/jobs?repo=try&revision=3337b8f7b4f0c409c5150c7415dfd3c5566b2160&selectedJob=207769916 Looks like we're missing gtk+-wayland-3.0 .pc files at try: [task 2018-10-25T13:15:57.779Z] 13:15:57 INFO - checking for gtk+-wayland-3.0 >= 3.10... no [task 2018-10-25T13:15:57.779Z] 13:15:57 INFO - ERROR: Package gtk+-wayland-3.0 was not found in the pkg-config search path. [task 2018-10-25T13:15:57.779Z] 13:15:57 INFO - ERROR: Perhaps you should add the directory containing `gtk+-wayland-3.0.pc' [task 2018-10-25T13:15:57.780Z] 13:15:57 INFO - ERROR: to the PKG_CONFIG_PATH environment variable [task 2018-10-25T13:15:57.780Z] 13:15:57 INFO - ERROR: No package 'gtk+-wayland-3.0' found I'll look how is this distributed on such old systems, it's present by default on Ubuntu 16.04.
Assignee | ||
Comment 3•2 years ago
|
||
WIP, builds fine on Ubuntu 16.04, fails on try.
Assignee | ||
Comment 4•2 years ago
|
||
Mike, looks like the gtk3 packages which are installed on try are not built with --enable-wayland-backend so the gtk+-wayland-3.0.pc is missing. Can that be adjusted? Thanks.
Flags: needinfo?(mh+mozilla)
Comment 5•2 years ago
|
||
We don't _build_ on Ubuntu 16.04. We _test_ on Ubuntu 16.04. We build on Debian Wheezy + custom built Gtk _3.4_. It seems reasonable to bump that to 3.10, but we haven't made the choice yet. Please make this about allowing to build against Gtk 3.10.
Flags: needinfo?(mh+mozilla)
Assignee | ||
Comment 6•2 years ago
|
||
Assignee | ||
Comment 7•2 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=6be929a7ab300b9162ba6c8ca031bf38696c8686
Assignee | ||
Updated•2 years ago
|
Attachment #9020005 -
Attachment is obsolete: true
Assignee | ||
Comment 8•2 years ago
|
||
https://treeherder.mozilla.org/#/jobs?repo=try&revision=fe52dc940c052f157b72fbe9ed7b25e6ae8e7e1a
Assignee | ||
Updated•2 years ago
|
Keywords: checkin-needed
Pushed by ebalazs@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/22770cb58170 Enable to build wayland target on Gtk 3.10, r=jhorak
Keywords: checkin-needed
Comment 10•2 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/22770cb58170
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
You need to log in
before you can comment on or make changes to this bug.
Description
•