Bug 1501944 - Enable to build wayland target on Gtk 3.10, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D10369