widget/gtk/nsClipboardWayland.cpp
@@ -24,6 +24,7 @@
 #include "mozilla/RefPtr.h"
 #include "mozilla/TimeStamp.h"
 #include "nsDragService.h"
+#include "mozwayland/mozwayland.h"
 
 #include "imgIContainer.h"
 
@@ -32,11 +33,7 @@
 #include <stdlib.h>
 #include <string.h>
 #include <fcntl.h>
-#include <gtk/gtk.h>
-#include <gdk/gdkwayland.h>
 #include <errno.h>
-
-#include "wayland/gtk-primary-selection-client-protocol.h"
 
 const char*
 nsRetrievalContextWayland::sTextMimeTypes[TEXT_MIME_TYPES_NUM] =
@@ -291,7 +288,7 @@ data_offer_action(void *data,
  *                     the compositor after matching the source/destination
  *                     side actions.
  */
-static const struct wl_data_offer_listener data_offer_listener = {
+static const moz_wl_data_offer_listener data_offer_listener = {
     data_offer_offer,
     data_offer_source_actions,
     data_offer_action
@@ -300,7 +297,8 @@ static const struct wl_data_offer_listener data_offer_listener = {
 WaylandDataOffer::WaylandDataOffer(wl_data_offer* aWaylandDataOffer)
   : mWaylandDataOffer(aWaylandDataOffer)
 {
-    wl_data_offer_add_listener(mWaylandDataOffer, &data_offer_listener, this);
+    wl_data_offer_add_listener(mWaylandDataOffer,
+        (struct wl_data_offer_listener *)&data_offer_listener, this);
 }
 
 WaylandDataOffer::~WaylandDataOffer(void)
