widget/gtk/nsClipboardWayland.h
@@ -9,6 +9,7 @@
 #define __nsClipboardWayland_h_
 
 #include "nsIClipboard.h"
+#include "mozwayland/mozwayland.h"
 #include "wayland/gtk-primary-selection-client-protocol.h"
 
 #include <gtk/gtk.h>
